Fixed up IntelliTect logo on small screens.

--- a/Homestead/Client/wwwroot/css/app.css
+++ b/Homestead/Client/wwwroot/css/app.css
@@ -30,6 +30,11 @@ div.navbar div.pinewood a.navbar-brand, .brown {
         color: #533910;
     }
 
+div.page {
+    background-color: burlywood;
+    height: 100vh;
+}
+
 /* Home Page */
 @font-face {
     font-family: Pinewood;
